# ROMulus

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  PRIVACY.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml  release.yml
scripts/: generate_icon.py
src/: App.css  App.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/bindings/: ActionType.ts  DeletionPlan.ts  ExecutionResult.ts  FilterSettings.ts  FormatPair.ts  NewRomEvent.ts  PagedGroups.ts  RomGroup.ts  ScanProgress.ts  ScanStatus.ts
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_initial.sql  002_metadata.sql  003_onboarding.sql  004_permanent_delete.sql  005_known_tags.sql  006_short_console_names.sql  007_clean_language_tags.sql  008_fix_known_tags.sql  009_clean_filter_settings.sql  010_dat_rom_name.sql
src-tauri/src/: db.rs  deduper.rs  lib.rs  main.rs  models.rs  parser.rs  picker.rs  watcher.rs
src-tauri/src/commands/: dat.rs  execute.rs  group.rs  history.rs  metadata.rs  mod.rs  prune.rs  qbt.rs  scan.rs  settings.rs  thumbnail.rs
src/components/: AlphabetScrubber.tsx  CommandPalette.tsx  ConsoleEmptyState.test.tsx  ConsoleEmptyState.tsx  ConsoleIcon.tsx  ConsolePageTitle.test.tsx  ConsolePageTitle.tsx  DiscBadge.tsx  ErrorBoundary.tsx  FileContextMenu.tsx  FilterBar.tsx  Layout.tsx  PrunePreviewDialog.tsx  (+6 more)
tools/: batch_import_dats.py  dat_to_stubs.py  extract_download_list.py  qbt_filter.py  snapshot_pre_redownload.txt
(+70 files in other folders)
