[package]
name = "romulus"
version = "0.2.3"
description = "ROMulus — ROM collection management hub"
authors = ["Nicolas Yanez"]
edition = "2021"

[lib]
name = "romulus_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "ROMulus"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.31", features = ["bundled"] }
rusqlite_migration = "1"
walkdir = "2"
regex = "1"
trash = "5"
reqwest = { version = "0.12", features = ["json"] }
ts-rs = "10"
quick-xml = "0.36"
zip = "2"
notify = "6"
keyring = "3"
sentry = { version = "0.34", default-features = false, features = ["backtrace", "contexts", "panic"] }
uuid = { version = "1", features = ["v4"] }
urlencoding = "2"

[dev-dependencies]
